fix bottom gallery not showing

--- a/assets/stylesheets/components/tiles/_tiles_photos.scss
+++ b/assets/stylesheets/components/tiles/_tiles_photos.scss
@@ -27,6 +27,7 @@
 		background-repeat: no-repeat;
 		height: 28.95rem;
 		margin-bottom: .8rem;
+		overflow: hidden;
 		width: 25%;
 
 		@media only screen and (max-width: 40em) {
@@ -113,8 +114,14 @@
 			}
 		}
 
-		.tile {
-			background-image: none !important;
+		@media only screen and (max-width: 768px) {
+			.tile {
+				background-size: contain;
+
+				img {
+					display: none;
+				}
+			}
 		}
 
 		img {
