--- a/assets/stylesheets/components/tiles/_tiles_standard.scss
+++ b/assets/stylesheets/components/tiles/_tiles_standard.scss
@@ -185,6 +185,10 @@
 
 .tile-container {
 	height: 100%;
+
+	&.owl-carousel {
+		display: block;
+	}
 }
 
 .tile-media {
